# btc-pay_gRPC

./: Cargo.toml  ReadMe.md  build.rs
proto/payment/: payment.proto
src/client/: client.rs
src/server/: server.rs
