[package]
name = "btc-pay_gRPC"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "payment-server"
path = "src/server/server.rs"

[[bin]]
name = "payment-client"
path = "src/client/client.rs"

[dependencies]
#gRPC implementation
tonic = "0.7"
#protocol implementation
prost = "0.10"
# async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"

